# CLST-2020

./: .bettercodehub.yml  .codecov.yml  .coverage  .dockerignore  .gitignore  Add-scripts-and-loads-fixtures.md  Auth.md  Continous_Integration.md  Deployment.md  Developer0_Deployment.md  Developer1_Continue_Development.md  Developer2_Continous_Integration.md  Developer3_Auth.md  Dockerfile  EditClam.md  Home.md  How-do-I-create-a-new-CLAM-server?.md  Management meeting February 12th.md  Meeting 1 summary.md  Meeting summary.md  README.md  Student-Use-Case.md  Teacher0_Admin-Page.md  Teacher1_Create_Clam.md  Teacher3_Edit_Clam.md  Teacher4_Add-processes-on-CLAM.md  The-Admin-Page.md  The-Backend-Guide-for-Future-Developers.md  User0.md  _config.yml  about.md  accounts_admin_py.html  accounts_migrations___init___py.html  accounts_models_py.html  accounts_urls_py.html  addLanguage.md  bla  codecov.yml  coverage.xml  createClam.md  (+13 more)
CI_test_suite/: server_system_test.py
CI_testing/: test.py
Documentation/: LabeledSegmentsAnalysisCHASING_improved.praat  LabeledSegmentsAnalysisISLA_improved.praat  ManualFA.docx  Protocol_Praat_check_alignment.docx  Read_me_scripts.txt  extract_results.py  praat-check.script  praat-transcriptie.script  scripts_overview.ods
_data/: cats.csv
_includes/: sidebar.html
_posts/: 2020-01-01-AdminPage.markdown  2020-01-01-addLanguage.markdown  2020-01-01-editAddressClam.markdown  2020-01-01-home.markdown  2020-01-01-studentCase.markdown
_site/: Add-scripts-and-loads-fixtures.html  EditClam.html  Home.html  How-do-I-add-another-language?.html  How-do-I-create-a-new-CLAM-server?.html  How-do-I-edit-the-address-of-an-already-existing-CLAM-server?.html  Student-Use-Case.html  The-Admin-Page.html  The-Backend-Guide-for-Future-Developers.html  about.html  addLanguage.html  example2.html  (+3 more)
fa-clam/: pyproject.toml
fa-clam/FAclam/: FAclam.LarsBook-Pro.local.ini  INSTALL  INSTRUCTIONS.rst  MANIFEST.in  setup.py  startserver_development.sh  startserver_production.sh
fa-clam/FAclam/FAclam/: FAclam.LarsBook-Pro.local.yml  FAclam.config.yml  FAclam.py  FAclam.wsgi  FAclam_wrapper.py
fa-clam/FAclam/deployment-examples/: apache-withurlprefix.conf  apache.conf  nginx-withurlprefix.conf  nginx.conf
(+496 files in other folders)
