[tool.poetry]
name = "equestria"
version = "0.1"
description = "A web-based collection of forced-alignment tools"
authors = ["GiPHouse <unknown@unknown.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.3"
pillow = "^7.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
