[tool.poetry]
name = "equestria"
version = "0.1"
description = "A web-based collection of forced-alignment tools"
authors = ["GiPHouse <unknown@unknown.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.3"
pillow = "^7.0.0"
django-crispy-forms = "^1.9.0"
requests = "^2.23.0"
black = "^19.10b0"
clam = "^3.0.11"

[tool.poetry.dev-dependencies]
pydocstyle = "^5.0"
black = {version = "^19.10b0"}

[tool.black]
line-length = 80
target-version = ["py37"]
exclude = '''
/(
  migrations
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

