[tool.poetry]
name = "fa-clam"
version = "0.1"
description = "A CLAM server running the Forced Alignment scripts"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
clam = "^3.0.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
